# ros2_acceleration_firmware_te0807

./: .gitignore  CMakeLists.txt  README.md  make_firmware.sh  package.xml
cmake/: colcon_ignore.cmake  data_permissions.cmake  decompress_img.cmake  firmware_setup.cmake  generate_mixin.cmake  generate_toolchain.cmake  imagebuilder_permissions.cmake  sdk.cmake  toolchain.cmake
firmware/: BOARD  SOC  boot.scr  system.dtb  zynqmp_fsbl.elf
firmware/device_tree/: kernel_default.dtbo  pl.dtsi
firmware/platform/te0807/: te0807.xpfm
firmware/platform/te0807/sw/: te0807.spfm
firmware/platform/te0807/sw/te0807/boot/: bl31.elf  linux.bif  pmufw.elf  u-boot.elf
scripts/: generate_toolchain.template.sh  index.yaml.template  kv260.mixin.template  te0807.mixin.template
