<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>acceleration_firmware_te0807</name>
  <version>0.0.0</version>
  <description>
    The package contains firmware artifacts for TE0807 board
  </description>
  <maintainer email="ouassil.allak@plc2.de">Saad Ouassil Allak</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>acceleration_firmware</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
